// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> can render without children 1`] = `
<div
  className="text_8h9m6q"
/>
`;

exports[`<Text /> renders bold 1`] = `
<div
  className="text_8h9m6q-o_O-text_bold_pgfqnw"
>
  Bold
</div>
`;

exports[`<Text /> renders disabled 1`] = `
<div
  className="text_8h9m6q-o_O-text_disabled_5k6q5e"
>
  Disabled
</div>
`;

exports[`<Text /> renders inline 1`] = `
<span
  className="text_8h9m6q-o_O-text_inline_36rlri"
>
  Inline
</span>
`;

exports[`<Text /> renders inverted 1`] = `
<div
  className="text_8h9m6q-o_O-text_inverted_bd4m75"
>
  Inverted
</div>
`;

exports[`<Text /> renders large 1`] = `
<h4
  className="text_8h9m6q-o_O-text_large_1aiv2f"
>
  Large
</h4>
`;

exports[`<Text /> renders light 1`] = `
<div
  className="text_8h9m6q-o_O-text_light_n2wlx5"
>
  Light
</div>
`;

exports[`<Text /> renders micro 1`] = `
<small
  className="text_8h9m6q-o_O-text_micro_azj9az"
>
  Micro
</small>
`;

exports[`<Text /> renders muted 1`] = `
<div
  className="text_8h9m6q-o_O-text_muted_10k87om"
>
  Muted
</div>
`;

exports[`<Text /> renders small 1`] = `
<div
  className="text_8h9m6q-o_O-text_small_krq4jw"
>
  Small
</div>
`;

exports[`<Text /> renders uppercased 1`] = `
<div
  className="text_8h9m6q-o_O-text_uppercased_4efw5a"
>
  Uppercased
</div>
`;

exports[`<Text /> renders with preserved whitespace 1`] = `
<div
  className="text_8h9m6q-o_O-text_preserveWhitespace_11oyobo"
>
     
  Preserved whitespace
     
</div>
`;
